src/snapshots/alma__infer__tests__infer-44.snap
---
source: src/infer.rs
expression: "infer(\"\\\nmodule Test exposing (main)\n\ntype List a = List a\n\nmain : List a\nmain = List 1\n\")"

---
Input:

module Test exposing (main)

type List a = List a

main : List a
main = List 1


---
Output:

[5:0]

The type signature is more general than the inferred type:

  3│  type List a = List a
  4│  
  5│  main : List a
   │  ↑↑↑↑
  6│  main = List 1

The type signature says the type is

List a

which it is more general than

List Float
