src/snapshots/alma__infer__tests__infer-45.snap
---
source: src/infer.rs
expression: "infer(\"\\\nmodule Test exposing (main)\n\ntype List a = List a\n\nmain : List a Float\nmain = List 1\n\")"

---
Input:

module Test exposing (main)

type List a = List a

main : List a Float
main = List 1


---
Output:

[5:7]

Type mismatch:  List a Float  ≠  List a

Expected

  3│  type List a = List a
  4│  
  5│  main : List a Float
   │         ↑↑↑↑↑↑↑↑↑↑↑↑
  6│  main = List 1

to be

List a

but seems to be

List a Float
