src/snapshots/alma__infer__tests__infer-48.snap
---
source: src/infer.rs
expression: "infer(\"\\\nmodule Test exposing (main)\n\ntype List a = { x : a }\n\nmain : List Float String\nmain = { x : 1 }\n\")"

---
Input:

module Test exposing (main)

type List a = { x : a }

main : List Float String
main = { x : 1 }


---
Output:

[5:7]

Type `List a (alias of { x : a })` accepts 1 parameter but it was called with 2.

  3│  type List a = { x : a }
  4│  
  5│  main : List Float String
   │         ↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑↑
  6│  main = { x : 1 }
