src/snapshots/alma__infer__tests__infer-49.snap
---
source: src/infer.rs
expression: "infer(\"\\\nmodule Test exposing (main)\n\nimport Test.Record exposing (Record)\n\nmodule Test.Record exposing (Record)\n    type Record a = { x : a }\n\nmain : Record Float\nmain = { x : 5 }\n\")"

---
Input:

module Test exposing (main)

import Test.Record exposing (Record)

module Test.Record exposing (Record)
    type Record a = { x : a }

main : Record Float
main = { x : 5 }


---
Output:

module Test

main : ∀ ∅ . Record Float (alias of { x : Float })


module Test.Record




