src/snapshots/alma__infer__tests__infer-9.snap
---
source: src/infer.rs
expression: "infer(r#\"\nmodule Parent\n\nimport Parent.Test exposing (test)\n\nadd = \\x -> x + test x\n\nmodule Parent.Test exposing (test)\n\n    test = \\x -> x + \"hi\"\n\"#)"

---
Input:


module Parent

import Parent.Test exposing (test)

add = \x -> x + test x

module Parent.Test exposing (test)

    test = \x -> x + "hi"


---
Output:

[10:21]

Type mismatch:  String  ≠  Float

Expected

   8│  module Parent.Test exposing (test)
   9│  
  10│      test = \x -> x + "hi"
    │                       ↑↑↑↑

to be

Float

but seems to be

String

Parent



