src/snapshots/alma__infer__tests__infer.snap
---
source: src/infer.rs
expression: "infer(\"\nmodule Test\n\na = 1\n\nb = 2\n           \")"

---
Input:


module Test

a = 1

b = 2
           

---
Output:

module Test



